[gd_scene load_steps=10 format=3 uid="uid://blpwdymp7skgw"]

[ext_resource type="Texture2D" uid="uid://blxwa0h1e81kv" path="res://assets/background/gameOverBackground.png" id="1_0k1x3"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_gxxoa"]
[ext_resource type="AudioStream" uid="uid://dss410n04r5m5" path="res://assets/sound/simpleClick.wav" id="3_fymvo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nhp0o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etpfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_im58l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6wsb8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ji0ua"]

[sub_resource type="Theme" id="Theme_27yma"]
Button/colors/font_color = Color(1, 1, 1, 0.572549)
Button/colors/font_pressed_color = Color(0.498039, 0.498039, 0.498039, 0.803922)
Button/styles/disabled = SubResource("StyleBoxEmpty_nhp0o")
Button/styles/focus = SubResource("StyleBoxEmpty_etpfu")
Button/styles/hover = SubResource("StyleBoxEmpty_im58l")
Button/styles/normal = SubResource("StyleBoxEmpty_6wsb8")
Button/styles/pressed = SubResource("StyleBoxEmpty_ji0ua")

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxxoa")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0k1x3")
expand_mode = 1

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 2
offset_top = 135.0
offset_right = 1152.0
offset_bottom = 204.0
theme_override_font_sizes/font_size = 45
text = "Игра окончена!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 500)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -500.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="VictoryLabel" type="Label" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Победитель
"
horizontal_alignment = 1

[node name="Separator2" type="Control" parent="VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SpentEnergyLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.792157, 0, 0, 0.72549)
theme_override_font_sizes/font_size = 20
text = "Энергии потрачено:"
horizontal_alignment = 1

[node name="GainedEnergyLabel" type="Label" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0.976471, 0, 0.564706)
theme_override_font_sizes/font_size = 20
text = "Энергии получено:"
horizontal_alignment = 1

[node name="Separator3" type="Control" parent="VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="BackToMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Меню"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(170, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Новая игра"

[node name="Separator" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="ExitButton" type="Button" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme = SubResource("Theme_27yma")
theme_override_font_sizes/font_size = 25
text = "Выйти"

[node name="ButtonClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fymvo")
volume_db = -7.0
bus = &"SFX"

[connection signal="pressed" from="VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
